--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
         "prettier": "^3.6.2",
         "tailwindcss": "^4.0.0",
         "vite": "^7.0.4"
+    },
+    "dependencies": {
+        "aos": "^2.3.4",
+        "bootstrap": "^5.3.8",
+        "bootstrap-icons": "^1.13.1"
     }
 }
