--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     },
     "dependencies": {
         "22": "^0.0.0",
+        "alpinejs": "^3.15.0",
         "aos": "^2.3.4",
         "bootstrap": "^5.3.8",
         "bootstrap-icons": "^1.13.1"
