--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^2.0.0",
         "prettier": "^3.6.2",
+        "puppeteer": "^24.22.3",
         "tailwindcss": "^4.0.0",
         "vite": "^7.0.4"
     },
